--- a/templates/receipts/receipts_list.html
+++ b/templates/receipts/receipts_list.html
@@ -40,7 +40,7 @@
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.customer.title }} {{ receipt.customer.name|title }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">₦{{ receipt.amount }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.payment_account  }}</td>
-          <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.shop_no.name }}</td>
+          <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.shop_no }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.payment_date }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">
             {% if receipt.image %}
